--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,1 +1,8 @@
-＜チャット画面＞
+<div class="chat">
+  <div class="chat_header">
+  </div>
+  <div class="chat_field">
+  </div>
+  <div class="chat_footer">
+  </div>
+</div>
