--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -56,16 +56,98 @@
   background-color: #ffffff;
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.room_name {
+  margin-top: 36px;
+  font-size: 24px;
+  color: #333;
+}
+
+.chat_end_btn {
+  margin-top: 40px;
+}
+
+
+.chat_end_btn a {
+  text-decoration: none;
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
 }
 
 .chat_field {
   background-color: #fafafa;
   height: calc(100vh - 100px - 90px);
-  padding-top: 46px 40px 0;
+  padding: 46px 40px 0;
+  overflow: scroll;
+}
+
+.name_date {
+  margin:10px 0;
+  display: flex;
+}
+
+.name_field {
+  font-size: 16px;
+  color: #434a54;
+  margin-right: 10px;
+}
+
+.date_field {
+  font-size: 12px;
+  color: #999;
+}
+
+.text_field {
+  font-size: 14px;
+  color: #434a54;
+  margin-bottom: 40px;
 }
 
 .chat_footer {
   background-color: #dddddd;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form_input {
+  background-color: white;
+  width:  100%;
+  display: flex;
+}
+
+.form_message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+
+.form_submit {
+  background-color: #38aef0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
 }
