--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,8 +1,91 @@
 <div class="chat">
   <div class="chat_header">
+    <div class="room_name">
+      hogefuga
+    </div>
+    <div class="chat_end_btn">
+      <a href="#">チャットを終了する</a>
+    </div>
   </div>
   <div class="chat_field">
+    <div class="name_date">
+      <div class="name_field">
+        Tom
+      </div>
+      <div class="date_field">
+        2020/3/31(wed)12:43:30
+      </div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
+    <div class="name_date">
+      <div class="name_field">Tom</div>
+      <div class="date_field">2020/3/31(wed)12:43:30</div>
+    </div>
+    <div class="text_field">おはよう</div>
   </div>
   <div class="chat_footer">
+    <div class="form_input">
+      <input class="form_message" placeholder= "type a message">
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <input type="file" class=hidden>
+      </label>
+    </div>
+    <input class="form_submit" type="submit" value="送信">
   </div>
 </div>
