--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,7 @@
 <div class="side_bar">
   <div class="side_header">
     <div class="header_name">
+      <%= link_to current_user.name, edit_user_path(current_user) %>
       <a href="#">Tom</a>
     </div>
     <div class="chat_btn">
