--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -2,42 +2,17 @@
   <div class="side_header">
     <div class="header_name">
       <%= link_to current_user.name, edit_user_path(current_user) %>
-      <a href="#">Tom</a>
+      <%# <a href="#">Tom</a> %>
     </div>
     <div class="chat_btn">
-      <a href="#">チャットを作成する</a>
+      <%= link_to "チャットを作成する", new_room_path %>
     </div>
   </div>
   <div class="side_room">
-    <div class="chat_room_btn">
-      <a href="#">techroom1</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom2</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom3</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom4</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom5</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom6</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom7</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom8</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom9</a>
-    </div>
-    <div class="chat_room_btn">
-      <a href="#">techroom10</a>
-    </div>
+     <% current_user.rooms.each do |room| %>
+      <div class="chat_room_btn">
+        <a href="#"><%= room.name %></a>
+      </div>
+     <% end %>
   </div>
 </div>
