--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -17,75 +17,25 @@
       </div>
     </div>
     <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
-    <div class="name_date">
-      <div class="name_field">Tom</div>
-      <div class="date_field">2020/3/31(wed)12:43:30</div>
-    </div>
-    <div class="text_field">おはよう</div>
   </div>
-  <div class="chat_footer">
-    <div class="form_input">
-      <input class="form_message" placeholder= "type a message">
-      <label class="form-image">
-        <span class="image-file">画像</span>
-        <input type="file" class=hidden>
-      </label>
+  <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+    <div class="chat_footer">
+      <div class="form_input">
+        <%= f.text_field :content, class: 'form_message', placeholder: 'type a message' %>
+        <label class="form-image">
+          <span class="image-file">画像</span>
+        <%= f.file_field :image, class: 'hidden' %>
+        </label>
+      </div>
+      <%= f.submit '送信', class: 'form_submit' %>
     </div>
-    <input class="form_submit" type="submit" value="送信">
-  </div>
+  <% end %>
+    <%# <div class="form_input"> %>
+      <%# <input class="form_message" placeholder= "type a message"> %>
+      <%# <label class="form-image"> %>
+        <%# <span class="image-file">画像</span> %>
+        <%# <input type="file" class=hidden> %>
+      <%# </label> %>
+    <%# </div> %>
+    <%# <input class="form_submit" type="submit" value="送信"> %>
 </div>
