--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat">
   <div class="chat_header">
     <div class="room_name">
-      hogefuga
+      <%= @room.name %>
     </div>
     <div class="chat_end_btn">
       <a href="#">チャットを終了する</a>
