--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -8,15 +8,7 @@
     </div>
   </div>
   <div class="chat_field">
-    <div class="name_date">
-      <div class="name_field">
-        Tom
-      </div>
-      <div class="date_field">
-        2020/3/31(wed)12:43:30
-      </div>
-    </div>
-    <div class="text_field">おはよう</div>
+      <%= render partial: 'message', collection: @messages %>
   </div>
   <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
     <div class="chat_footer">
